--- a/sources/AssemblyVisualizer/DependencyBrowser/DependencyBrowserWindow.xaml
+++ b/sources/AssemblyVisualizer/DependencyBrowser/DependencyBrowserWindow.xaml
@@ -81,7 +81,7 @@
                                                         <Storyboard>
                                                             <ColorAnimation Storyboard.TargetName="brdSelectionBrush"
                                                                             Storyboard.TargetProperty="Color"
-                                                                            To="GreenYellow"
+                                                                            To="Orange"
                                                                             Duration="0:0:0.3"/>
                                                         </Storyboard>
                                                     </BeginStoryboard>
