Assembly Browser: Added ability to hide assembly list in graph view Fixed strange HAL issues

--- a/sources/AssemblyVisualizer/AssemblyBrowser/AssemblyBrowserWindow.xaml
+++ b/sources/AssemblyVisualizer/AssemblyBrowser/AssemblyBrowserWindow.xaml
@@ -28,7 +28,8 @@
     <Window.InputBindings>
         <KeyBinding Command="NavigationCommands.BrowseBack" Key="Left" Modifiers="Control"/>
         <KeyBinding Command="NavigationCommands.BrowseForward" Key="Right" Modifiers="Control"/>
-        <KeyBinding Command="{Binding ShowInnerSearchCommand}" Key="F" Modifiers="Control"/>
+        <KeyBinding Command="{Binding ShowInnerSearchCommand}" Key="F" Modifiers="Control"/>        
+        <KeyBinding Command="{Binding ToggleAssembliesCommand}" Key="A" Modifiers="Control"/>       
     </Window.InputBindings>
     <Window.CommandBindings>
         <CommandBinding Command="Search" Executed="SearchExecuted"/>
