Assembly Browser: Added Visualize Descendants context menu entry

--- a/sources/AssemblyVisualizer/AssemblyBrowser/UserControls/ScreenPresenter.xaml
+++ b/sources/AssemblyVisualizer/AssemblyBrowser/UserControls/ScreenPresenter.xaml
@@ -10,10 +10,6 @@
     <Grid>
         <ContentPresenter x:Name="cpGraph"/>
         <ContentPresenter x:Name="cpSearch"
-                          Content="{Binding SearchView, ElementName=userControl}">
-            <ContentPresenter.RenderTransform>
-                <TranslateTransform x:Name="searchTransform"/>
-            </ContentPresenter.RenderTransform>
-        </ContentPresenter>
+                          Content="{Binding SearchView, ElementName=userControl}"/> 
     </Grid>
 </UserControl>
