--- a/sources/AssemblyVisualizer/AssemblyBrowser/Screens/SearchScreenView.xaml
+++ b/sources/AssemblyVisualizer/AssemblyBrowser/Screens/SearchScreenView.xaml
@@ -305,7 +305,7 @@
                                         Background="{StaticResource RightArrowDrawing}"
                                         Style="{StaticResource ImageButtonStyle}"
                                         Visibility="{Binding CanVisualize, Converter={StaticResource BooleanToVisibilityConverter}}"
-                                        ToolTip="Visualize"/>
+                                        ToolTip="Visualize Descendants"/>
                                 <Button VerticalAlignment="Center"                                                                      
                                         Command="{Binding BrowseAncestryCommand}" 
                                         Margin="4, 0"
