Ancestry Browser: Added assembly full name to tooltip for assemblies

--- a/sources/AssemblyVisualizer/AncestryBrowser/AncestryBrowserWindow.xaml
+++ b/sources/AssemblyVisualizer/AncestryBrowser/AncestryBrowserWindow.xaml
@@ -214,6 +214,7 @@
                                     <ColumnDefinition/>
                                 </Grid.ColumnDefinitions>
                                 <TextBlock Text="{Binding Name}" 
+                                           ToolTip="{Binding FullName}"
                                            VerticalAlignment="Center"
                                            FontSize="18"
                                            Foreground="{Binding CaptionBrush}"
